[feat] Add cards endpoints
